--- a/Cleaning/Cleaning Process.ipynb
+++ b/Cleaning/Cleaning Process.ipynb
@@ -215,6 +215,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43c8affa",
+   "metadata": {},
+   "source": [
+    "# Create a column of lists with the 6 basic elements\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "df6498be",
@@ -333,6 +341,14 @@
    "outputs": [],
    "source": [
     "data_sp['len6'] = data_sp['PTASDG'].apply(lambda x : len(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "438207aa",
+   "metadata": {},
+   "source": [
+    "# Len must be 6"
    ]
   },
   {
@@ -5826,6 +5842,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34d9e5e3",
+   "metadata": {},
+   "source": [
+    "# Breakdown the column of lists into 6 basic columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "id": "f8624c8f",
@@ -5957,50 +5981,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "142f1300",
+   "execution_count": null,
+   "id": "96ac3cf5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 321200 entries, 0 to 321199\n",
-      "Data columns (total 24 columns):\n",
-      " #   Column         Non-Null Count   Dtype         \n",
-      "---  ------         --------------   -----         \n",
-      " 0   P#T#N#A#S#D#G  321200 non-null  object        \n",
-      " 1   Genre 1        302051 non-null  object        \n",
-      " 2   Genre 2        232675 non-null  object        \n",
-      " 3   Genre 3        164656 non-null  object        \n",
-      " 4   Genre 4        96894 non-null   object        \n",
-      " 5   Genre 5        59604 non-null   object        \n",
-      " 6   Genre 6        28333 non-null   object        \n",
-      " 7   Genre 7        17959 non-null   object        \n",
-      " 8   Genre 8        7212 non-null    object        \n",
-      " 9   Genre 9        3834 non-null    object        \n",
-      " 10  Genre 10       38 non-null      object        \n",
-      " 11  Genre 11       5 non-null       object        \n",
-      " 12  Genre 12       5 non-null       object        \n",
-      " 13  Genre 13       5 non-null       object        \n",
-      " 14  Genre 14       2 non-null       object        \n",
-      " 15  Genre 15       2 non-null       object        \n",
-      " 16  PTASDG         321200 non-null  object        \n",
-      " 17  len6           321200 non-null  int64         \n",
-      " 18  Ranking        321200 non-null  int64         \n",
-      " 19  Track          321200 non-null  object        \n",
-      " 20  Artist         321200 non-null  object        \n",
-      " 21  Streams        321200 non-null  int64         \n",
-      " 22  Date           321200 non-null  datetime64[ns]\n",
-      " 23  Genre          321200 non-null  object        \n",
-      "dtypes: datetime64[ns](1), int64(3), object(20)\n",
-      "memory usage: 58.8+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_sp.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85526a00",
+   "metadata": {},
+   "source": [
+    "# Drop unnecessary columns & transform the importants"
    ]
   },
   {
