--- a/Analysis/Analysis Process.ipynb
+++ b/Analysis/Analysis Process.ipynb
@@ -489,6 +489,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34d80d41",
+   "metadata": {},
+   "source": [
+    "# Separate day,month,year "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "a0c66dce",
@@ -957,6 +965,14 @@
    "source": [
     "genres_list = []\n",
     "data_sp['AllGenres'].apply(lambda x : [genres_list.append(y) for y in x])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8524801d",
+   "metadata": {},
+   "source": [
+    "# Simplify genres, there are too many & count them "
    ]
   },
   {
@@ -1480,6 +1496,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ffa94dc6",
+   "metadata": {},
+   "source": [
+    "# Most popular genre"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "8572e583",
@@ -1508,6 +1532,14 @@
     "plt.yticks(fontsize=15,fontname='Serif')\n",
     "\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79097d4c",
+   "metadata": {},
+   "source": [
+    "# Usage of most popular genres through time "
    ]
   },
   {
@@ -1580,6 +1612,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1313c6b0",
+   "metadata": {},
+   "source": [
+    "# Total streams per year"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "a420bec7",
@@ -1618,6 +1658,14 @@
     "plt.xlabel(\"\")\n",
     "plt.xticks(fontsize=15,fontname='Serif')\n",
     "plt.yticks(fontsize=15,fontname='Serif')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38d4623f",
+   "metadata": {},
+   "source": [
+    "# Streams before & after covid"
    ]
   },
   {
@@ -1695,6 +1743,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "071d442c",
+   "metadata": {},
+   "source": [
+    "# Total streams per month"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "369a830e",
@@ -1745,6 +1801,14 @@
     "plt.xlabel(\"\")\n",
     "plt.xticks(fontsize=15, fontname='Serif')\n",
     "plt.yticks(fontsize=15, fontname='Serif')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa424b58",
+   "metadata": {},
+   "source": [
+    "# Total streams per month & year"
    ]
   },
   {
@@ -1933,6 +1997,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e07fb41a",
+   "metadata": {},
+   "source": [
+    "# Most popular artists"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "b0e91b5f",
@@ -1983,6 +2055,14 @@
     "plt.yticks(fontsize=15, fontname='Serif')\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cd97411",
+   "metadata": {},
+   "source": [
+    "# Genres of top 10 artists"
    ]
   },
   {
